# xoa-container

./: .gitignore  Dockerfile  LICENSE  README.md  conf.yaml  docker-compose.yml  pyproject.toml  run.sh
.github/workflows/: build.yml
.trunk/: trunk.yaml
etc/: env.py
scripts/: xoa_init.py
src/xoa_container/config/: loader.py
src/xoa_container/configurator/: configurator.py
src/xoa_container/utils/: log.py
